fix: bad contrast background for search bar on dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1981,3 +1981,9 @@ input.search {
   background-color: #0093ed;
   color: white;
 }
+.search-container {
+  background: unset;
+}
+.landing-page-header .header-details .search-container:hover .search {
+  color: var(--native1) !important;
+}
